Update citation format

--- a/contents/Responsible_AI.tex
+++ b/contents/Responsible_AI.tex
@@ -5,7 +5,7 @@ Our product (RecipeAI) recommends dishes based on the estimated freshness and av
 While we prioritize dishes that consume ingredients nearing expiry, we must minimize the chance of recommending dishes that include items that are already expired or unsafe. We use a Bayesian network to estimate the probability that an ingredient is spoiled given its type, storage condition, and time in storage.
 \par\vspace{\baselineskip}
 \setlength{\parindent}{0pt}
-However, even with such a model in place, it is still difficult to accurately predict the expiration of each food item. Different food items, even of the same type of food, can expire over a range of days. Currently, more advanced models use neural networks and are trained using large datasets of all types, including temperature, moisture level, microbial growth and more \cite{PredictiveAIforFoodSpoilage} to predict the spoilage of food. Currently, for our model, we do not have such large datasets, and we can only estimate whether the food has expired or not based on simple user inputs. We also do not have sensors to monitor the condition of the food items in real time. This will inevitably lead to inaccuracy in our predictions. To avoid safety issues, we make it clear to users that this app is only meant for recommendation. Users still need to check whether the food items in storage are in good condition for consumption.
+However, even with such a model in place, it is still difficult to accurately predict the expiration of each food item. Different food items, even of the same type of food, can expire over a range of days. Currently, more advanced models use neural networks and are trained using large datasets of all types, including temperature, moisture level, microbial growth and more (\cite{PredictiveAIforFoodSpoilage}) to predict the spoilage of food. Currently, for our model, we do not have such large datasets, and we can only estimate whether the food has expired or not based on simple user inputs. We also do not have sensors to monitor the condition of the food items in real time. This will inevitably lead to inaccuracy in our predictions. To avoid safety issues, we make it clear to users that this app is only meant for recommendation. Users still need to check whether the food items in storage are in good condition for consumption.
 
 \subsection{Transparency and Explainability}
 For every recommendation, the expected utility is calculated using feasibility and a utility score of the recipe. When a user queries for a recommendation, RecipeAI will return the feasibility, utility, as well as expected utility for each recipe, before displaying the final recommendation at the end. This allows user to have more information on how the recommendation is made, without going too deep into exactly how each of the values is computed.
