--- a/contents/Utility.tex
+++ b/contents/Utility.tex
@@ -5,7 +5,7 @@ $$
 $$
 
 \subsection{Utility of recipe}
-The utility of each recipe is modeled as a function of multiple attributes, including the estimated cooking time, ease of preparation, nutritional profile, dietary classification (e.g., vegetarian), and course type (e.g., dessert). We apply the \textit{k}\nobreakdash-means clustering algorithm to group recipes with similar attribute profiles and assign a utility value to each cluster. Model training was conducted on the dataset described in \cite{RecipeDataset}.
+The utility of each recipe is modeled as a function of multiple attributes, including the estimated cooking time, ease of preparation, nutritional profile, dietary classification (e.g., vegetarian), and course type (e.g., dessert). We apply the \textit{k}\nobreakdash-means clustering algorithm to group recipes with similar attribute profiles and assign a utility value to each cluster. Model training was conducted on an online Kaggle dataset (\cite{RecipeDataset}).
 
 % \subsection{Utility Formulae}
 % \input{appendix/algorithms/algo0}
