Updates from Overleaf

--- a/appendix/appendices.tex
+++ b/appendix/appendices.tex
@@ -2,15 +2,18 @@
 \label{app:diagrams}
 \begin{figure}[ht]
     \input{appendix/drawings/BN_diagram}
+    \caption{Bayesian Network Structure}
     \label{fig:BN}
 \end{figure}
 
 \begin{figure}[ht]
     \centering
     \includegraphics[width=1.0\textwidth]{appendix/Image/Decision-Network.png}
-    \caption{Decision Network structure}
+    \caption{Decision Network Structure}
     \label{fig:DN}
 \end{figure}
+
+\newpage
 
 \section{Data}
 \label{app:data}
@@ -22,11 +25,14 @@
     \item Training data for Bayesian Network: \href{https://github.com/CS3263-Group66/Group66-Project/blob/main/Code/Data/food_condition.csv}{GitHub — food\_condition.csv}
 \end{itemize}
 
+\newpage
+
 \section{Algorithm}
 \label{app:algorithm}
 \subsection{Algorithms for inference machine}
 \input{appendix/algorithms/algo1}
 
-\section{Acknowledgment of the use of Generative AI}
+\newpage
 
+\section{Acknowledgment of the use of Generative AI}
 We utilized Generative AI tools primarily to understand APIs of libraries used such as \textbf{pgmpy} and \textbf{scikit-learn}, and learn Latex syntax and packages to format and generate the report. The main design and implementation of different components of the application were done independently. AI tools were only used as reference and learning aids to become familiar with tools and syntax 
