--- a/introduction.tex
+++ b/introduction.tex
@@ -1,6 +1,6 @@
 \section{Introduction}
 \subsection{Motivation}
-Research has shown that households often waste food because expiration dates are overlooked and meal planning is not done systematically. The amount of avoidable food waste is equivalent to each household throwing away a 2.5kg bag of rice every week. And over half such waste can be reduced if meals are better planned. Recognizing this issue, our team aims to develop an AI-driven solution. An \textbf{AI-driven recipe suggestion system} can address this challenge by tracking food items, reasoning about their freshness, and proposing meal options that prioritize ingredients with shorter expiration dates.
+Research has shown that households often waste food because expiration dates are overlooked and meal planning is not done systematically.(\cite{halfwaste}) The amount of avoidable food waste is equivalent to each household throwing away a 2.5kg bag of rice every week. And over half such waste can be reduced if meals are better planned. Recognizing this issue, our team aims to develop an AI-driven solution. An \textbf{AI-driven recipe suggestion system} can address this challenge by tracking food items, reasoning about their freshness, and proposing meal options that prioritize ingredients with shorter expiration dates.
 
 \subsection{Project Scope}
 Our solution contains the following features
