--- a/main.tex
+++ b/main.tex
@@ -81,6 +81,8 @@
 \input{contents/Utility}
 \input{contents/Future_Improvement}
 \input{contents/Responsible_AI}
+\section{Code repository}
+Link to the code repository: \url{https://github.com/CS3263-Group66/Group66-Project/releases/tag/Submission}
 \input{conclusion}
 
 \begin{appendices}
