--- a/reference.bib
+++ b/reference.bib
@@ -1,10 +1,3 @@
-@book{jjmurphy1999,
-  author    = {John J. Murphy},
-  title     = {Technical Analysis of the Financial Marketets: A Comprehensive Guide to Trading Methods and Applications},
-  publisher = {New York Institute of Fiance},
-  year      = {1999}
-}
-
 @book{aima,
   author    = {Stuart Russell and Peter Norvig},
   title     = {Artificial Intelligence: A Modern Approach},
@@ -25,24 +18,20 @@
   url     = {http://jmlr.org/papers/v25/23-0487.html}
 }
 
+@misc{halfwaste,
+  title = {Half Of Food Waste Thrown Away By Singapore Households Can Be Prevented: NEA Household Waste Study},
+  author = {National Environmetn Agency},
+  year = {2017},
+  howpublished = {\url{https://www.investopedia.com/financial-term-dictionary-4769738}},
+  note = {Accessed: 2025-05-15}
+}
 
 @misc{investopedia,
   title = {Investopedia financial term dictonary},
   author = {Investopedia},
   year = {2025},
-  howpublished = {\url{https://www.investopedia.com/financial-term-dictionary-4769738}},
+  howpublished = {\url{https://www.nea.gov.sg/media/news/news/index/half-of-food-waste-thrown-away-by-singapore-households-can-be-prevented-nea-household-waste-study}},
   note = {Accessed: 2025-05-15}
-}
-
-
-@misc{frazier2018,
-      title={A Tutorial on Bayesian Optimization}, 
-      author={Peter I. Frazier},
-      year={2018},
-      eprint={1807.02811},
-      archivePrefix={arXiv},
-      primaryClass={stat.ML},
-      url={https://arxiv.org/abs/1807.02811}, 
 }
 
 @article{PredictiveAIforFoodSpoilage,
