--- a/contents/Utility.tex
+++ b/contents/Utility.tex
@@ -1,11 +1,11 @@
 \section{Utility}
-We calculate the utility of the recipe in order to make recommendations. Since our aim is to reduce the number of near-expiry food left in the fridge, the overall utility of a recipe consists of two parts, the utility of the recipe which depends the recipe itself, and an expiry score which depends on the available ingredients of this recipe.\par
+We calculate the utility of the recipe in order to make recommendations. Since our aim is to reduce the number of near-expiry food left in the fridge, the overall utility of a recipe consists of two parts, the utility of the cooking, which depends on the difficulty of cooking this dish, and the expiry score which depends on the available ingredients of this recipe.\par
 $$
-{Overall\ utility = utility\ of\ recipe + expiry\ score}
+{Utility\ of\ Recipe = Utility\ of\ Cooking + Expiry\ Score}
 $$
 
-\subsection{Utility of recipe}
-The utility of each recipe is modeled as a function of multiple attributes, including the estimated cooking time, ease of preparation, nutritional profile, dietary classification (e.g., vegetarian), and course type (e.g., dessert). We apply the \textit{k}\nobreakdash-means clustering algorithm to group recipes with similar attribute profiles and assign a utility value to each cluster. Model training was conducted on the dataset described in \cite{RecipeDataset}.
+\subsection{Utility of Cooking}
+The utility of cooking for each recipe is modeled as a function of multiple attributes, including the estimated cooking time, ease of preparation, nutritional profile, dietary classification (e.g., vegetarian), and course type (e.g., dessert). We apply the \textit{k}\nobreakdash-means clustering algorithm to group recipes with similar attribute profiles and assign a utility value to each cluster. Model training was conducted on the dataset described in \cite{RecipeDataset}.
 
 % \subsection{Utility Formulae}
 % \input{appendix/algorithms/algo0}
@@ -13,7 +13,7 @@ The utility of each recipe is modeled as a function of multiple attributes, incl
 \subsection{Learning for utility}
 The original dataset (\ref{app:data}) contains a large number of headers, many of which are redundant. For model development, we therefore restrict the feature set to the first 25 attributes (see Appendix 3 for the full list of 25 attributes). Because we aim to cluster recipes by similarity, we apply feature scaling so that all variables contribute comparably to the distance-based objective used by k-means clustering. Most attributes are binary indicators which are 0 or 1, whereas "step\_cnt" and "ingredient\_cnt" are integer-valued and can be $>1$. To prevent these count variables from disproportionately influencing Euclidean distances between vectorized recipes, we normalize them to the interval [0,1] via Min–Max scaling:
 \input{appendix/algorithms/algo0}
-In order to have a large diversity for the recipe utility, we set the number of clusters to $k = 2000$. The k-means algorithm is trained using $scikit-learn$ implementation. The trained model is saved into a ".joblib" file for future predictions.\par
+In order to have a large diversity for the utility values, we set the number of clusters to $k = 2000$. The k-means algorithm is trained using $scikit-learn$ implementation. The trained model is saved into a ".joblib" file for future predictions.\par
 After clustering, each cluster is mapped to a utility value. For new recipes, we use the trained k-means algorithm to group it into a cluster, and map it to the corresponding utility value.
 
 \subsection{Expiry Score}
@@ -31,6 +31,6 @@ Since we are only checking the expiry score of food items stored in the current 
 \subsection{Expected Utility}
 Since some ingredient of the recipe could be expired, hence not feasible, the expected utility is taken as:
 $$
-P(feasible|recipe) * U(recipe)
+E(U(recipe)) = P(feasible|recipe) * U(recipe)
 $$
-where $U(recipe)$ is the utility of the recipe assuming that it is feasible.
+where $U(recipe)$ is the utility of recipe assuming that it is feasible.
