Updates from Overleaf

--- a/appendix/appendices.tex
+++ b/appendix/appendices.tex
@@ -34,5 +34,29 @@
 
 \newpage
 
+\section{Contribution}
+Lei Jianwen: 
+\begin{itemize}
+    \item Agent Structure design.
+    \item Sub-Bayesian Network for food expiration model.
+    \item Integration between front end and backend.
+\end{itemize}
+
+San Muyun:
+\begin{itemize}
+    \item Building of SmartFridge CLI app.
+    \item Integration between various models and utility.
+    \item Integrate the models and functions into the CLI app.
+    \item Analyze the section on responsible AI.
+\end{itemize}
+
+Chen Yixun: 
+\begin{itemize}
+    \item Training the model for Utility function.
+    \item Data collection and analysis.
+    \item Implementing the Bayesian Network and mechanism of inference.
+    \item System and architecture design.
+\end{itemize}
+
 \section{Acknowledgment of the use of Generative AI}
 We utilized Generative AI tools primarily to understand APIs of libraries used such as \textbf{pgmpy} and \textbf{scikit-learn}, and learn Latex syntax and packages to format and generate the report. The main design and implementation of different components of the application were done independently. AI tools were only used as reference and learning aids to become familiar with tools and syntax 
